# vibegb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md  TASKS.md  TEST_PLAN.md
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: index.html
crates/core/: Cargo.toml
crates/core/src/: emu.rs  lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
tools/rom-suites/: m1-subset.template.txt
